[project]
name = "yumi"

[tool.poetry]
name = "yumi"
version = "0.1.0"
description = "A Chatbot"
authors = ["barweiss"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"
isort = "^5.13.2"
discord-py = "^2.3.2"
ell-ai = "^0.0.5"
tiktoken = "^0.7.0"
openai = "^1.46.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
tox = "^4.15.0"
flake8 = "^7.0.0"
black = "^24.4.0"
mypy = "^1.9.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
